[project]
name = "codex-bridge"
version = "0.1.0"
description = "Plugin-bundled MCP server bridging Claude Code to Codex CLI for typed review handoffs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
